--- a/static/sass/1-bases/_base.sass
+++ b/static/sass/1-bases/_base.sass
@@ -59,3 +59,7 @@ li,li:hover
 a,a:hover
   text-decoration: none
   color: inherit
+
+/* Work around fo boostrap 4 collapse not closing on mobile */
+.navbar-close
+  display: none !important
