--- a/static/sass/2-layouts/_layout.sass
+++ b/static/sass/2-layouts/_layout.sass
@@ -63,6 +63,9 @@
       background: $secondary
       color: $primary
 
+#index_profile_tray
+  margin-right: 50px
+
 #about_card
   width: 100vw
   background: whitesmoke
