--- a/static/sass/_breakpoints.sass
+++ b/static/sass/_breakpoints.sass
@@ -10,6 +10,9 @@ $mq_tablet_laptop: "(min-device-width: 401px)"
 /*** BREAKPOINT VARS  ***/
 
 @media #{$mq-phone}
+  #main_nav_logo
+    display: none
+
   #main_musicplayer
     .mp-subtitle
       margin-top: 15px
